2009-08-18  John W. Eaton  <jwe@octave.org>

	* oct-conf.h.in: New #defines for HDF5_LDFLAGS and HDF5LDFLAGS.
	* Makefile.in (OCTAVE_LIBS, OCTINTERP_LINK_DEPS):
	Include them in the lists.
	* toplev.cc (octave_config_info): Include them in the list.

2009-08-17  John W. Eaton  <jwe@octave.org>

	* oct-conf.h.in: New #defines for ZLIB_CPPFLAGS and ZLIB_LDFLAGS.
	* toplev.cc (octave_config_info): Include them in the list.

2009-08-17  John W. Eaton  <jwe@octave.org>

	* Makefile.in (OCTINTERP_LINK_DEPS): Include FFTW_LDFLAGS,
	FFTW_LIBS and READLINE_LIBS in the list.
	(OCTAVE_LIBS): Attempt to include all necessary dependencies for
	static linking.

2009-08-17  John W. Eaton  <jwe@octave.org>

	* Makefile.in (eigs.oct, chol.oct, qr.oct): Add library-specific
	CPPFLAGS and LDFLAGS variables to CPPFLAGS and LDFLAGS.
	From Benjamin Lindner <lindnerb@users.sourceforge.net>.

2009-08-17  John W. Eaton  <jwe@octave.org>

	* Makefile.in (OCTINTERP_LINK_DEPS): List $(LIBS) last.

2009-08-17  Michael Goffioul  <michael.goffioul@gmail.com>

	* Makefile.in (OCTINTERP_LINK_DEPS): Include $(LIBCRUFT) and
	$(LIBS) in the list.
	(OCT_LINK_DEPS): Include $(LIBOCTAVE) and $(LIBCRUFT) in the list.
	(eigs.oct, qz.oct): Add $(BLAS_LIBS) to LDFLAGS.
	(ccolamd.oct, symbfact.oct): Add library-specific CPPFLAGS and
	LDFLAGS variables to CPPFLAGS and LDFLAGS.

2009-08-17  Jaroslav Hajek  <highegg@gmail.com>

	* ov-struct.h, ov-struct.cc: Revert to e08d72bb988e.
	* ov-class.h, ov-class.cc: Partially revert to e08d72bb988e.
	(octave_class::subsasgn): Cut&paste code from octave_struct::subsasgn
	for the nested dot indexing.
	* ov-usr-fcn.cc (Voptimize_subasgn_calls): Default to true.

2009-08-13  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/fft.cc, DLD-FUNCTIONS/fft2.cc,
	DLD-FUNCTIONS/fftn.cc, DLD-FUNCTIONS/fftw.cc: Update for new FFTW
	defines.

	* Makefile.in (amd.oct, colamd.oct, dmperm.oct, symcrm.oct,
	qr.oct, fft.oct, fft2.oct, fftn.oct, fftw.oct): Add