@@ -480,6 +480,12 @@ b = sparse(i, j, v, sz(1), sz(2));\n\
 	    retval = find_nonzero_elem_idx (v, nargout, 
 					    n_to_find, direction);
         }
+      else if (nargout <= 1 && n_to_find == -1 && direction == 1)
+        {
+          // This case is equivalent to extracting indices from a logical
+          // matrix. Try to reuse the possibly cached index vector.
+          retval(0) = arg.index_vector ();
+        }
       else
         {
           boolNDArray v = arg.bool_array_value ();
